--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <span class="word" onclick="customPop(this, 'customer', '37842', '1242', 'CUSTOMER', '2');">customer</span> <span
         class="word" onclick="customPop(this, 'and', '36638', '38', 'AND', '1');">and</span> <span class="word"
                                                                                                    onclick="customPop(this, 'she', '37365', '765', 'SHE', '1');">she</span>
-    <span class="word" onclick="customPop(this, 'didnt', '570', '0', 'SLARTIBARTFAST', '3');">didn't</span> <span
+    <span class="word" onclick="customPop(this, 'didnot', '570', '0', 'SLARTIBARTFAST', '3');">didn't</span> <span
         class="word" onclick="customPop(this, 'even', '36883', '283', 'EVEN', '1');">even</span> <span class="word"
                                                                                                        onclick="customPop(this, 'buy', '36723', '123', 'BUY', '1');">buy</span>
     <span class="word" onclick="customPop(this, 'a', '97', '0', 'SLARTIBARTFAST', '3');">a</span> <span class="word"
