finished mobile version. prevents soft keyboard opening on mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Title</title>
     <script src="articles.js"></script>
     <link rel="stylesheet" href="articles.css">
@@ -11,7 +12,7 @@
 <div id="container">
     <h2>상자에 텍스트를 복사하여 붙여 넣기:</h2>
     <h3 id="instructions" style="display: none">기사가 있어야한다고 생각되면 다음 단어를 클릭하십시오.</h3>
-    <div id="terry" contenteditable="true" onpaste="pastey(event)">
+    <div id="terry" contenteditable="true" onpaste="pastey(event)" >
     </div>
 
     <br><br>
