last commit before getting off oneDrive

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Title</title>
     <script src="articles.js"></script>
     <link rel="stylesheet" href="articles.css">
+    <link rel="shortcut icon" type="image/png" href="https://notborder.org/articles/icon-192x192.png">
+    <link rel="shortcut icon" sizes="192x192" href="https://notborder.org/articles/icon-192x192.png">
+    <link rel="apple-touch-icon" href="https://notborder.org/articles/icon-192x192.png">');
 </head>
 <body>
 <h1>Article Trainer: a, an, the</h1>
